# ultraudit

./: .gitignore  CURRENT_TASK.md  Cargo.toml  Makefile  README.md
.audit/agents/: codex.toml  custom-shell.toml
docs/en/: README.md  prompt-pack-v0.2-plan.md  vision.md
docs/ru/: prompt-pack-v0.2-plan.md  vision.md
packs/0.2.0/: pack.toml
packs/0.2.0/integration/: confidence-model.md  deduplication-rules.md  evidence-model.md  final-editor-checklist.md  findings-schema.md  severity-model.md
packs/0.2.0/lenses/api-contracts/: evidence.md  false-positives.md  practices.md  prompt.md
packs/0.2.0/lenses/architecture/: evidence.md  false-positives.md  practices.md  prompt.md
packs/0.2.0/lenses/code-quality/: evidence.md  false-positives.md  practices.md  prompt.md
packs/0.2.0/lenses/correctness/: evidence.md  false-positives.md  practices.md  prompt.md
packs/0.2.0/lenses/data-integrity/: evidence.md  false-positives.md  practices.md  prompt.md
packs/0.2.0/lenses/dependency-supply-chain/: evidence.md  false-positives.md  practices.md  prompt.md
packs/0.2.0/lenses/ml-ai/: evidence.md  false-positives.md  practices.md  prompt.md
packs/0.2.0/lenses/observability/: evidence.md  false-positives.md  prompt.md  (+1 more)
packs/0.2.0/prompts/: base-reviewer.md  cross-system-review.md  domain-discovery.md  domain-lens-review.md  domain-synthesis.md  final-editor.md  previous-runs-comparison.md  project-optic-review.md  system-synthesis.md
src/: cli.rs  config.rs  intake.rs  lib.rs  main.rs  model.rs  orchestrator.rs  pack.rs  runner.rs  toml.rs  util.rs
tests/: cli.rs
(+36 files in other folders)
