[package]
name = "ultraudit"
version = "0.1.0"
edition = "2021"
autobins = false
description = "CLI tool for deep agentic review of applications"
authors = ["Ultraudit contributors"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "uat"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"] }
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
